[tool.poetry]
name = "komootdashboard"
version = "0.1.0"
description = ""
authors = ["Maximilian Reimer <mreimer@agile-im.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.20.5"
pandas = "^2.2.0"
plotly = "^5.18.0"
streamlit = "^1.30.0"
kompyoot = "^1.0.5"
pytz = "^2023.3.post1"


[tool.poetry.group.dev.dependencies]
watchdog = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

